# brainfuck-interpreter

./: CMakeLists.txt
environment/linux/: Dockerfile
includes/: brainfuck.hpp  defines.hpp
includes/expression/: expression.hpp
includes/expression/commands/: backward.hpp  decrement.hpp  forward.hpp  increment.hpp  input.hpp  output.hpp
includes/interpreter/: interpreter.hpp
includes/memory/: memory.hpp
includes/options/: option.hpp  parser.hpp
sources/: interpreter.cpp  main.cpp
sources/memory/: memory.cpp
