cmake_minimum_required(VERSION 3.20)

set(BFI_PROJECT_NAME "brainfuck-interpreter")

set(BFI_VERSION_MAJOR 1)
set(BFI_VERSION_MINOR 0)

set(BFI_EXECUTABLE_NAME "bf")

project(${BFI_PROJECT_NAME}
    VERSION ${BFI_VERSION_MAJOR}.${BFI_VERSION_MINOR})

set(BFI_INCLUDE_DIRECTORIES
    ${PROJECT_SOURCE_DIR}/includes/)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

file(GLOB_RECURSE BFI_INCLUDE_FILES 
    ${PROJECT_SOURCE_DIR}/includes/*.h
    ${PROJECT_SOURCE_DIR}/includes/*.hpp)

file(GLOB_RECURSE BFI_SOURCE_FILES 
    ${PROJECT_SOURCE_DIR}/sources/*.cpp
    ${PROJECT_SOURCE_DIR}/sources/*.cpp)

add_executable(${BFI_EXECUTABLE_NAME}
    ${BFI_INCLUDE_FILES} ${BFI_SOURCE_FILES})

target_include_directories(${BFI_EXECUTABLE_NAME} PUBLIC
    ${BFI_INCLUDE_DIRECTORIES})